# nested-sampling-book

./: .gitignore  CLAUDE.md  _config.yml  _toc.yml  contributors.md  intro.md  pyproject.toml  references.bib
.mcp_handley_lab/agents/: _session_2570766.json  _session_2570873.json
advanced/: GP.ipynb  RW_NS.ipynb
basic/: basic.ipynb  line.csv  line_fitting.ipynb  quickstart.ipynb  quickstart_pytorch.ipynb
integrations/: c.ipynb  cpp.ipynb  cupy.ipynb  fortran.ipynb  index.md  julia.ipynb  numba.ipynb  numpy.ipynb  numpy_scipy.ipynb  pytorch.ipynb  r.ipynb  tensorflow.ipynb
physics/: supernovae.ipynb
sbi/: nle_posterior.ipynb
scripts/: BF.py  CMB.csv  GW.py  GW150914_Heterodyned_Uniform_Components.py  GW150914_Uniform_Components.py  GW170817_Heterodyned_NRTidal_Constrained_Bilby.py  GW170817_Heterodyned_NRTidal_Constrained_Bilby_H0.py  GW170817_Heterodyned_NRTidal_General.py  GW170817_Heterodyned_NRTidal_General_H0.py  GW170817_NRTidal_Constrained_Bilby.py  GW170817_NRTidal_General.py  GW_Heterodyned_Uniform_Components.py  GW_Uniform_Components.py  line.csv  line.py  supernovae.ipynb
