[project]
name = "nested-sampling-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anesthetic>=2.10.3",
    "blackjax",
    "distrax>=0.1.5",
    "flax>=0.10.4",
    "jax>=0.4.31",
    "jaxlib==0.4.31",
    "jimgw>=0.2.0",
    "jupyter-book>=1.0.4.post1",
    "optax>=0.2.4",
    "sbi>=0.25.0",
    "tensorflow-probability>=0.25.0",
    "torch>=2.5.1",
]

[tool.uv.sources]
blackjax = { git = "https://github.com/handley-lab/blackjax", rev = "nested_sampling" }
